--- a/index.html
+++ b/index.html
@@ -10,7 +10,47 @@
     <title>Sticky Notes App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <header class="header">
+      <h1 class="header__title">Sticky Notes</h1>
+    </header>
+    <main class="main">
+      <section class="form-container">
+        <form class="form">
+          <div class="form__input-container">
+            <label for="subject">Note Subject</label>
+            <input
+              type="text"
+              id="subject"
+              name="subject"
+              placeholder="Enter the notes` subject"
+              maxlength="20"
+              class="form__input form__subject-input"
+            />
+            <label for="date">Date</label>
+            <input
+              type="date"
+              id="date"
+              name="date"
+              placeholder="Enter the notes` date"
+              class="form__input form__date-input"
+            />
+          </div>
+
+          <label for="note">Note Text</label>
+          <textarea
+            name="note"
+            id="note"
+            placeholder="enter your note here (max 100 characters)"
+            maxlength="100"
+            class="form__note-input"
+            rows="5"
+          ></textarea>
+          <button type="submit" class="form__submit-button">Add</button>
+          <p class="form_error-text">Error</p>
+        </form>
+      </section>
+      <section class="notes-container"></section>
+    </main>
     <script type="module" src="./src/js/app.js"></script>
   </body>
 </html>
