implement feature for adding notes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             rows="5"
           ></textarea>
           <button type="submit" class="form__submit-button">Add</button>
-          <p class="form_error-text">Error</p>
+          <p class="form__error-text">Error</p>
         </form>
       </section>
       <section class="notes-container"></section>
