implemenet modal structure

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       </section>
       <section class="notes-container"></section>
     </main>
+    <div class="delete-modal">
+      <div class="delete-modal__container"></div>
+    </div>
     <script type="module" src="./src/js/app.js"></script>
   </body>
 </html>
